# Client-HTTP---Practica2024

./: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpOptions.cpp  HttpOptions.h  README.md  Weather.cpp  Weather.h  country_list.txt  main.cpp
tinyxml2-master/: CMakeLists.txt  Makefile  cmake_install.cmake
